# mymediatrail

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: download-ffprobe.js
src/: index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_media_tables.sql
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs
src-tauri/src/media/: merge.rs
src-tauri/src/platform/: volume.rs
src-tauri/src/scanner/: fingerprint.rs  metadata.rs  mod.rs
src/components/: Cleanup.tsx  Duplicates.tsx  Layout.tsx  Library.tsx  Sidebar.tsx
